# pygeom-ucl-hpge

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/worflows/: main.yml
.github/workflows/: main.yml
src/pygeom_ucl_hpge/: __init__.py  core.py
tests/: test_package.py
