[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools_scm[toml]>=7"
]
build-backend = "setuptools.build_meta"

[project]
name = "pygeom-ucl-hpge"
description = "The geometry of the UCL HPGe detector in pyg4ometry."
authors = [
    { name = "Toby Dixon", email = "toby.m.dixon97@gmail.com" },
]
maintainers = []
readme = "README.md"
license.file = "LICENSE"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
[project.dependencies]
dependencies = [
    "numpy>=1.21",
    "awkward",
    "pyg4ometry",
    "matplotlib", 
    "legend-pygeom-tools",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://your.project.homepage"
"Bug Tracker" = "https://your.project.bugtracker"

[tool.setuptools_scm]
write_to = "src/pygeom-ucl-hpge/_version.py"

[tool.setuptools]
include-package-data = true
zip-safe = false
license-files = [
    "LICENSE",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = "error"
log_cli_level = "info"
testpaths = "tests"

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
extend-select = [
  "B",
  "I",
  "C4",
  "SIM",
  "UP",
]
ignore = []
